# opt4048gui

./: .gitignore  pyproject.toml
src/opt4048gui/: main.py  qwiic_opt4048.py
